# tronko

./: .README.md.swp  .clang-format  README.md
.github/workflows/: build.yml
example_datasets/multiple_trees/: missing.fasta  missing_taxonomy.txt  missingreads_pairedend_150bp_2error_multiple_MSA_results.txt  missingreads_pairedend_150bp_2error_partition_results.txt  missingreads_pairedend_150bp_2error_read1.fasta  missingreads_pairedend_150bp_2error_read2.fasta  missingreads_singleend_150bp_2error.fasta  missingreads_singleend_150bp_2error_multiple_MSA_results.txt  missingreads_singleend_150bp_2error_partition_results.txt
example_datasets/single_tree/: missing.fasta  missing_taxonomy.txt  missingreads_pairedend_150bp_2error_read1.fasta  missingreads_pairedend_150bp_2error_read2.fasta  missingreads_pairedend_150bp_2error_results.txt  missingreads_singleend_150bp_2error.fasta  missingreads_singleend_150bp_2error_results.txt
tronko-assign/: Makefile  alignment.c  alignment.h  alignment_macros.h  alignment_scoring.c  alignment_scoring.h  allocateMemoryForResults.c  allocateMemoryForResults.h  allocatetreememory.c  allocatetreememory.h  assignment.c  assignment.h  getSequenceinRoot.c  getSequenceinRoot.h  global.h  gz_linebuffer.c  gz_linebuffer.h  hashmap.c  hashmap.h  hashmap_base.h  needleman_wunsch.c  needleman_wunsch.h  options.c  placement.c  placement.h  printAlignments.c  printAlignments.h  readreference.c  readreference.h  readsam.c  readsam.h  seq_align.h  tronko-assign  tronko-assign.c
tronko-assign/WFA2/: affine2p_penalties.h  bitmap.h  cigar.h  mm_stack.h  score_matrix.h  string_padded.c  string_padded.h  wavefront.h  wavefront_backtrace_buffer.h  wavefront_bialign.h  wavefront_bialigner.h  wavefront_components.h  wavefront_compute_affine.c  wavefront_compute_affine2p.c  wavefront_compute_edit.c  wavefront_compute_linear.c  wavefront_display.h  wavefront_offset.h  wavefront_pcigar.h  wavefront_penalties.h  wavefront_plot.h  wavefront_slab.h  wavefront_unialign.h
tronko-assign/bwa_source_files/: bwa.h  bwamem.c  bwamem.h  bwamem_pair.c  fastmap.c  kopen.c  ksw.c  kthread.c  rle.c  rle.h
tronko-assign/ffc.h/: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTORS  Makefile  amalgamate.py  compile_flags.txt  example.c  ffc.h  readme.md  release.md
tronko-assign/ffc.h/.github/workflows/: c.yml  clanker_cross.yml  release.yml  windows.yml
tronko-assign/ffc.h/src/: api.h  bigint.h  common.h  digit_comparison.h  ffc.h  parse.h
tronko-assign/ffc.h/test_src/: double_cases_comma.csv  double_cases_general.csv  double_cases_infnan.csv  float_cases.csv  sonicsv.h  supplemental_tests.c  test.c  test_exhaustive.c  test_int.c
tronko-assign/ffc.h/tools/: print_version_tag.c  release.sh
tronko-assign/ffc.h/tools/ubuntu_32_devel/: Dockerfile
tronko-build/: Makefile  allocatetreememory.c  allocatetreememory.h  getclade.c  getclade.h  global.h  hashmap.c  hashmap.h  hashmap_base.h  likelihood.c  likelihood.h  likelihood_for_monica.c  math.c  math.h  opt.c  opt.h  options.c  options.h  printtree.c  printtree.h  readfasta.c  readfasta.h  readreference.c  readreference.h  tools.h  tronko-build  tronko-build.c
tronko_assign/: allocateMemoryForResults.c  allocateMemoryForResults.h  allocatetreememory.c  assignment.h  bwa_source_files_include.h  getSequenceinRoot.c  global.h  hashmap_base.h  placement.c  placement.h  printAlignments.h  readreference.h
tronko_assign/WFA2/: affine_penalties.h  bitmap.c  heatmap.h  mm_allocator.h  profiler_counter.h  profiler_timer.h  wavefront_aligner.h  wavefront_attributes.h  wavefront_backtrace_offload.c  wavefront_components.c  wavefront_compute.c  wavefront_debug.c  wavefront_extend.c  wavefront_heuristic.h
tronko_build/: Makefile  allocatetreememory.c  getclade.c  getclade.h  global.h  hashmap.c  math.c  readreference.c  tronko_build.c
(+32 files in other folders)
